@@ -1,6 +1,9 @@
 			   XPCE ChangeLog
 			   ==============
 
+* FIXED: Win32: ->geometry to use SystemParametersInfo(SPI_GETWORKAREA, ..)
+  to determine boundaries.
+
 * FIXED: More robust and better re-entrant implementation of pceDispatch(),
   fixing problems with errors in select() (error code 9: EBADF).  Required
   for SWI-Prolog's improved library(socket).
